Fix contrast for better accessibility

--- a/src/sass/home.component.scss
+++ b/src/sass/home.component.scss
@@ -77,7 +77,7 @@ devmind-header {
   }
 
   a {
-    color: white;
+    color: #374717;
   }
 }
 
